cluster/production/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: pdf-app
  replicas: 1
  template:
    metadata:
      labels:
        app: pdf-app
    spec:
      nodeSelector:
        kubernetes.io/hostname: raspberrypi
      hostname: nginx
      containers:
      - name: nginx-container
        image: nginxinc/nginx-unprivileged:alpine
        ports:
        - name: nginx-http
          containerPort: 8080
        volumeMounts:
        - name: conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: nginx-tmp
          mountPath: /tmp/nginx 
        - name: nginx-cache
          mountPath: /var/cache/nginx 
        - name: nginx-pid
          mountPath: /var/run 
        - name: images
          mountPath: /www/carson/images 
          readOnly: true
        - name: www
          mountPath: /www  
          readOnly: true
      volumes:
      - name: conf
        configMap:
          name: nginx-config-map
      - name: nginx-tmp
        emptyDir:
          sizeLimit: 500Mi
      - name: nginx-cache
        emptyDir:
          sizeLimit: 500Mi
      - name: nginx-pid
        emptyDir:
          sizeLimit: 1Mi
      - name: images
        hostPath:
          path: /media/website_assets/images 
      - name: www
        hostPath:
          path: /media/website_assets/www
