cluster/production/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pdf-service
spec:
  selector:
    app: pdf-app
  ports:
  - name: ollama
    protocol: "TCP"
    port: 11434
    targetPort: ollama-port
  - name: pgvector
    protocol: "TCP"
    port: 5432
    targetPort: pgvector-port
  - name: jupyter
    protocol: "TCP"
    port: 8888
    targetPort: jupyter-port
  - name: pulsar-http
    protocol: "TCP"
    port: 9090
    targetPort: pul-http-port
  - name: nginx
    protocol: "TCP"
    port: 8080
    targetPort: nginx-http
  - name: booksearch
    protocol: "TCP"
    port: 9000
    targetPort: bs-port
  - name: pulsar
    protocol: "TCP"
    port: 6650
    targetPort: pulsar-port
  type: ClusterIP
