cluster/production/routes.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: birthdaysite
spec:
  parentRefs:
  - name: traefik-gateway
    sectionName: http
  rules:
  - backendRefs:
    - name: pdf-service
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cb-search-http
spec:
  parentRefs:
  - name: traefik-gateway
    sectionName: http
  hostnames:
  - "search.carsonblinn.com"
  rules:
  - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cb-search-https
spec:
  parentRefs:
  - name: traefik-gateway
    sectionName: search-https
  hostnames:
  - "search.carsonblinn.com"
  rules:
  - backendRefs:
    - name: pdf-service
      port: 9000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cb-pdf-http
spec:
  parentRefs:
  - name: traefik-gateway
    sectionName: http
  hostnames:
  - "pdf.carsonblinn.com"
  rules:
  - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cb-pdf-https
spec:
  parentRefs:
  - name: traefik-gateway
    sectionName: pdf-https
  hostnames:
  - "pdf.carsonblinn.com"
  rules:
  - backendRefs:
    - name: pdf-service
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cb-http
spec:
  parentRefs:
  - name: traefik-gateway
    sectionName: http
  hostnames:
  - "*.carsonblinn.com"
  rules:
  - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cb-https
spec:
  parentRefs:
  - name: traefik-gateway
    sectionName: root-https
  hostnames:
  - "*.carsonblinn.com"
  rules:
  - backendRefs:
    - name: pdf-service
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: default
  hostnames:
    - "flux.carsonblinn.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hook
      backendRefs:
        - name: flux-https
          namespace: flux-system
          port: 8443
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-http
spec:
  parentRefs:
  - name: traefik-gateway
    sectionName: http
  hostnames:
  - "flux.carsonblinn.com"
  rules:
  - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
